--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,33 @@
+@import url('https://fonts.googleapis.com/css?family=Crimson+Pro|Philosopher&display=swap');
+/* font import */
+
 .App {
   text-align: center;
+  margin: 2% auto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.MuiTypography-h1 {
+  font-family: 'Philosopher', sans-serif!important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.dark-mode{
+  color: white!important;
+  background-color: #313843!important;
 }
 
-.App-link {
-  color: #61dafb;
+.dark-mode div.MuiPaper-root.MuiPaper-elevation1.makeStyles-paper-32.MuiPaper-rounded{
+  color:white!important;
+  background-color: #313843!important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div.MuiPaper-root.MuiPaper-elevation1.makeStyles-paper-32.MuiPaper-rounded{
+  border: 1px solid #F62D6E!important;
+}
+  
+.dark-mode .MuiTypography-root.MuiTypography-h1.MuiTypography-colorPrimary{
+  color: white!important;
+}
+  
+.MuiButtonBase-root.MuiButton-root.MuiButton-outlined.MuiButton-outlinedSecondary{
+  margin: 20px 0!important;
 }
